kubernetes/apps/observability/victoria-logs/app/service-vmauth-compat.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: victoria-logs-vl-vmauth
  namespace: observability
spec:
  type: ClusterIP
  selector:
    app: server
    app.kubernetes.io/instance: victoria-logs
    app.kubernetes.io/name: vl
  ports:
    - name: http
      port: 8427
      protocol: TCP
      targetPort: http
