kubernetes/apps/observability/victoria-logs/app/http-route.yaml
---
# yaml-language-server: $schema=https://schemas.mortebrume.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
spec:
  hostnames:
    - logs.${APP_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network-system
  rules:
    - filters:
        - requestRedirect:
            path:
              replaceFullPath: /select/vmui/
              type: ReplaceFullPath
            statusCode: 302
          type: RequestRedirect
      matches:
        - path:
            type: Exact
            value: /
    - backendRefs:
        - name: vlsingle-victoria-logs
          namespace: observability
          port: 9428
